# live-coding-siege

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  db.py  docker-compose.yaml  key.event  main.py  manifest.json  pyproject.toml  reg.py  rule.md  schema.sql  server.py  siege_cmd.py  test.py  test_crypto.py  utils.py
crypto/: core.py  type.py
schema/: base.py  event.py  huddle.py  interactive.py  message.py  siege.py  slash_cmd.py  user.py
static/: index.html  index.js  styles.css
ws_mgr/: __init__.py  const.py  controller.py  exceptions.py  schema.py  signals.py
