[project]
name = "live-coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "arrow>=1.3.0",
    "beautifulsoup4>=4.14.2",
    "blockkit>=2.1.2",
    "cryptography>=46.0.2",
    "fastapi[standard]>=0.119.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "slack-sdk>=3.36.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
test = []
